# AsyncReasoning

./: .gitignore  README.md  async_query.ipynb  async_reasoning_cache.py  async_reasoning_prompting.py  demo_async_thoughts.ipynb  demo_async_thoughts_fast_kernels.ipynb  demo_simple.ipynb  demo_with_step_timestamps.ipynb  eval_delay.py  eval_math-500_split.py  requirements.txt  run_jailbreak_on_async.py
async_reasoning/: async_reasoning_cache_fast_kernels.py  async_reasoning_generation.py  async_reasoning_prompting.py  cache.py  cache_fast_kernels.py  generation.py  prompting.py  safety_prompting.py  solver.py
evals/: baseline_solver.py  eval_gpqa-diamond_split.py  eval_math-500_split.py  eval_math-500_split_baseline.py  eval_mmlu-pro_split.py  gpqa-diamond.py  math500.py  math500_sharded.py  mmlu-pro.py  tts_evaluator.py  voice_assistant.py
inference_lib/: CMakeLists.txt  README.md  metadata_provider.py  nirvana_pyptoject.toml  pyproject.toml
inference_lib/cmake/: pytorch.cmake
inference_lib/python/hogwild/: attention.py  formatting.py  generation.py
inference_lib/src/: benchmark.cpp  binding.cu  common.h  cuda_check.cuh  dispatch.h  hogwild_cpu.h  q_rope.h  rope.cuh  test.cpp  vec.cuh
inference_lib/src/kernels/: kernel_v21.cuh
inference_lib/src/tpl/: CMakeLists.txt  kernel_v21.cu
inference_lib/test/: end-to-end.py
inference_lib/test/shared_cache/: __init__.py  cache_block.py  combined_cache.py  shared_cache_manager.py
notebooks/: demo_async_thoughts.ipynb  demo_async_thoughts_fast_kernels.ipynb  demo_baseline.ipynb  demo_simple.ipynb  demo_voice_assistant.ipynb
shared_cache/: cache_block.py  combined_cache.py  shared_cache_manager.py
tortoise/: README.md  api.py  do_tts.py
tortoise-tts/: README.md  app.py  eval.ipynb  requirements.txt
tortoise-tts/tortoise/: api.py
tortoise/models/: arch_util.py  hifigan_decoder.py  stream_generator.py
tortoise/utils/: tokenizer.py
utils/: answer_processing.py  api_config.json  audio_recorder.html.j2  audio_recorder.py  eliza_config.json  gpu_parallel.py  plotting.py  task_queue.py
